homelab-mcp/envs/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-mcp
  annotations:

spec:
  selector:
    matchLabels:
      app: homelab-mcp
  template:
    metadata:
      labels:
        app: homelab-mcp
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: homelab-mcp
          imagePullPolicy: IfNotPresent
